# learning-agent

./: .gitignore  README.md  pyproject.toml  test_404.py  test_empty_404.py  test_nim_hang.py  test_openai_url.py  test_sqlite_ro.py  test_strip.py
backend/: .env.example  init_db.py  learning_agent.db-shm  learning_agent.db-wal  pyproject.toml  seed_db.py  test_openai.py
backend/app/: main.py
backend/app/agents/: intent_parser.py  llm_client.py  nudge_composer.py  plan_generator.py  plan_reviser.py
backend/app/core/: config.py  database.py  scheduler.py  security.py
backend/app/models/: models.py
backend/app/routes/: activity.py  goals.py  plan_revisions.py  plans.py  simulate.py
backend/app/schemas/: schemas.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/components/: DebugControls.tsx  PlanDiff.tsx
